--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,8 +8,13 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require font-awesome
+ *= require persona-buttons
+ *= require farbtastic
+ *= require openid-selector/openid
+ *= require open_conference_ware/custom
+ *= require bootstrap-social
  *= require_self
- *= require_tree .
  */
 
 label {
